# kari

./: Cargo.toml
errors/: Cargo.toml
errors/src/: lib.rs
errors/src/common/: backtraced.rs  formatted.rs  macros.rs  mod.rs  traits.rs
errors/src/emitter/: mod.rs
errors/src/errors/: mod.rs
errors/src/errors/ast/: asterror.rs  mod.rs
errors/src/errors/cli/: cli_errors.rs  mod.rs
errors/src/errors/compiler/: compiler_errors.rs  mod.rs
errors/src/errors/flattener/: flattener_errors.rs  mod.rs
errors/src/errors/import/: import_error.rs  mod.rs
errors/src/errors/input/: input_errors.rs  mod.rs
errors/src/errors/package/: mod.rs  package_error.rs
errors/src/errors/parser/: mod.rs  parser_errors.rs  parser_warnings.rs
errors/src/errors/state/: mod.rs  state_error.rs
errors/src/errors/type_checker/: mod.rs  type_checker_error.rs
kari/: README.md  context.rs  lib.rs  main.rs  updater.rs
