[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1.0"

[dependencies.backtrace]
version = "0.3.67"

[dependencies.colored]
version = "2.0.0"

[dependencies.color-backtrace]
version = "0.5.1"

[dependencies.derivative]
version = "2.2.0"

[dependencies.serde]
version = "1.0.163"
features = [ "derive", "rc" ]

[dependencies.thiserror]
version = "1.0.40"